# agent-briefcase

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  SCENARIOS-build.md  SCENARIOS-init.md  SCENARIOS-sync.md  SCENARIOS.md  briefcase_init.py  briefcase_sync.py  noxfile.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
example-project/: CLAUDE.md
scripts/: bump-version.py
shared/.claude/commands/: review.md
src/: briefcase_build.py  briefcase_sync.py
src/briefcase_init/: __init__.py
src/briefcase_init/templates/: BRIEFCASE.md.template  dotfiles-README.md  includes-README.md
templates/: BRIEFCASE.md.template
test-project/: CLAUDE.md
tests/: scenario_report.py  test_version.py
tests/build_cmd/: conftest.py  test_scenarios.py
tests/build_cmd/approved_files/: TestBasicBuild_1.test_1_basic_build_copies_files.approved.txt  TestCircularIncludeDetection_4.test_1_circular_includes_produce_error.approved.txt  TestFilesChangedExitsOne_9.test_1_changes_exit_one.approved.txt  TestIncludeExpansion_2.test_1_include_replaces_directive_with_fragment.approved.txt  TestIncludesDirNotCopied_6.test_1_includes_dir_not_in_output.approved.txt  TestMissingInclude_5.test_1_missing_include_produces_error.approved.txt  TestNestedIncludes_3.test_1_nested_includes_are_resolved.approved.txt  TestNoConfigSrcIsNoop_10.test_1_no_config_src_exits_zero.approved.txt  TestNoOpWhenUpToDate_8.test_1_no_changes_exits_zero.approved.txt  TestStaleFileCleanup_7.test_1_removed_source_is_removed_from_config.approved.txt  TestUnstagedConfigDetection_11.test_1_config_file_not_staged_while_source_is.approved.txt
tests/e2e/: conftest.py  test_scenarios.py
tests/e2e/approved_files/: TestCLIConfiguration_7.test_2_custom_project_name.approved.txt  TestCLIConfiguration_7.test_3_custom_shared_name.approved.txt  TestCLIConfiguration_7.test_3_env_var_overrides_cli_briefcase_path.approved.txt  (+14 more)
tests/init_cmd/: conftest.py  test_scenarios.py
tests/sync/: conftest.py  test_scenarios.py
(+32 files in other folders)
