[project]
name = "agent-briefcase"
version = "0.10.0"
description = "Sync AI agent configuration files from your team's briefcase repo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
briefcase-sync = "briefcase_sync:main"
briefcase-build = "briefcase_build:main"
briefcase-init = "briefcase_init:main"

[project.optional-dependencies]
test = [
    "pytest",
    "approvaltests",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["briefcase_sync", "briefcase_build"]
packages = ["briefcase_init"]

[tool.setuptools.package-data]
briefcase_init = ["templates/*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.pytest.ini_options]
testpaths = ["tests"]
